--- a/src/assets/css/board.css
+++ b/src/assets/css/board.css
@@ -42,3 +42,10 @@
   margin-right: 10px;
   min-height: 300px;
 }
+
+.simple-stats {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 20px;
+}
